# api_test

./: .gitignore  API_DOCUMENTATION.md  README.md  cUsersosj58OneDriveDesktopapi_testBackendopenapi.json
.claude/: settings.local.json
Backend/crawling-server/: .env.development.example  .env.example  .env.production.example  .gitignore  CELERY_REDIS_GUIDE.md  CI_CD_SETUP.md  CRAWLING_SERVER_ARCHITECTURE.md  ERROR_HANDLING.md  PGADMIN_GUIDE.md  PROJECT_GUIDELINE.md  README.md  SECURITY.md  SENTRY_SETUP.md  SENTRY_SLACK_QUICKSTART.md  SENTRY_SLACK_SETUP.md  alembic.ini  docker-compose.yml  prometheus.yml  pyproject.toml
Backend/crawling-server/.github/workflows/: cd.yml  ci.yml
Backend/crawling-server/app/: Dockerfile  api.py  auto_scheduler.py  circuit_breaker.py  college_crawlers.py  config.py  content_crawler.py  content_selectors.py  crud.py  database.py  logging_config.py  main.py  metrics.py  models.py  playwright_crawler.py  prometheus.yml  rate_limiter.py  requirements.txt  requirements_utf8.txt  robots_parser.py  schemas.py  sentry.py  sentry_config.py  slack_notify.py  tasks.py  url_utils.py  worker_app.py
Backend/crawling-server/app/middleware/: __init__.py  metrics_middleware.py  rate_limit_middleware.py  security.py
Backend/crawling-server/college_code/: General_Events_Recruitment.py  acdemic_credit.py  degree.py  educational_test.py  job.py  scholarship.py  tuition_payment.py  volunteer.py
Backend/crawling-server/grafana/: dashboards.yml
Backend/crawling-server/migrations/versions/: 0001_init.py
Backend/crawling-server/tests/: README.md  __init__.py  conftest.py
(+196 files in other folders)
